--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "bulma": "^0.2.3",
-    "choo": "^3.3.0",
+    "choo": "^4.0.3",
     "js-cookie": "^2.1.3",
     "query-string": "^4.2.3",
-    "run-parallel": "^1.1.6"
+    "run-parallel": "^1.1.6",
+    "xhr": "^2.3.2"
   },
   "devDependencies": {
     "budo": "^9.3.0",
