--- a/package.json
+++ b/package.json
@@ -6,18 +6,22 @@
   "author": "timwis <tim@timwis.com>",
   "license": "MIT",
   "scripts": {
-    "start": "budo . --push --live --css styles/main.css"
+    "start": "bankai start"
   },
   "dependencies": {
     "bulma": "^0.2.3",
     "choo": "^4.0.3",
+    "github-api": "^2.3.0",
     "js-cookie": "^2.1.3",
     "query-string": "^4.2.3",
     "run-parallel": "^1.1.6",
+    "run-series": "^1.1.4",
+    "sheetify": "^6.0.1",
+    "timeago.js": "^2.0.4",
     "xhr": "^2.3.2"
   },
   "devDependencies": {
-    "budo": "^9.3.0",
+    "bankai": "^5.1.3",
     "choo-log": "^3.0.0"
   }
 }
