--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "serverless-data",
+  "name": "github-feed",
   "version": "0.1.0",
-  "description": "Edit data files in GitHub with a GUI",
+  "description": "Mobile-friendly GitHub activity feed. Check who starred what while on the go.",
   "main": "src/index.js",
   "author": "timwis <tim@timwis.com>",
   "license": "MIT",
   "scripts": {
-    "start": "bankai start"
+    "start": "bankai start",
+    "build": "bankai build",
+    "deploy": "npm run build && surge dist -d github-feed.surge.sh"
   },
   "dependencies": {
     "bulma": "^0.2.3",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "bankai": "^5.1.3",
-    "choo-log": "^3.0.0"
+    "choo-log": "^3.0.0",
+    "surge": "^0.18.0"
   }
 }
